upadting category actionsheet and other small changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,70 @@
-<app-header></app-header>
+<ion-app>
+    <ion-split-pane when="sm" contentId="main-content">
+      <ion-menu contentId="main-content">
+        <ion-header>
+          <ion-toolbar color="primary">
+            <ion-title>Menu</ion-title>
+          </ion-toolbar>
+        </ion-header>
+  
+        <ion-content>
+          <ion-list>
+            <ion-list-header>
+               list header
+            </ion-list-header>
+            <ion-menu-toggle [autoHide]="false">
+              <ion-item button>
+                <ion-icon slot="start" name='home'></ion-icon>
+                <ion-label>
+                  Home
+                </ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+          </ion-list>
+        </ion-content>
+      </ion-menu>
+  
+      <div class="ion-page" id="main-content">
+        <ion-header>
+          <ion-toolbar>
+            <ion-buttons slot="start">
+              <ion-menu-toggle>
+                <ion-button>
+                  <ion-icon slot="icon-only" name="menu"></ion-icon>
+                </ion-button>
+              </ion-menu-toggle>
+            </ion-buttons>
+            <ion-title class="ion-text-center">Branding</ion-title>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+            <app-searchbar></app-searchbar>
+            <!-- <app-dynamic></app-dynamic> -->
+            <ion-content>
+                <ion-card (click)="expandItem(item)" *ngFor="let item of items">
+                  <ion-card-header>
+                    <ion-card-title>
+                      {{item.title}}
+                      <ion-icon class="ion-float-right" name="caret-down-outline">
+                      </ion-icon> 
+                      <b>({{item.count}})</b>
+                    </ion-card-title>
+                  </ion-card-header>
+                  <ion-card-content>
+                    <app-expandable [expanded]="item.expanded">
+                      <p>Hello there.</p>
+                      <p>Hello there.</p>
+                      <p>Hello there.</p>
+                      <p>Hello there.</p>
+                      <p>Hello there.</p>
+                      <p>Hello there.</p>
+                    </app-expandable>
+                  </ion-card-content>
+                </ion-card>
+            </ion-content>
+            <app-category></app-category>
+        </ion-content>
+      </div>
+    </ion-split-pane>
+  </ion-app>
+<app-footer></app-footer>
