--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,12 +52,7 @@
                   </ion-card-header>
                   <ion-card-content>
                     <app-expandable [expanded]="item.expanded">
-                      <p>Hello there.</p>
-                      <p>Hello there.</p>
-                      <p>Hello there.</p>
-                      <p>Hello there.</p>
-                      <p>Hello there.</p>
-                      <p>Hello there.</p>
+                      <app-card></app-card>
                     </app-expandable>
                   </ion-card-content>
                 </ion-card>
