--- a/src/app/expandable/expandable.component.scss
+++ b/src/app/expandable/expandable.component.scss
@@ -2,7 +2,12 @@
     transition: max-height 0.4s ease-in-out;
     overflow: hidden;
     height: auto;
+    max-height: 100%;
   }
   .collapsed {
     max-height: 0 !important;
+  }
+
+  .expanded{
+    max-height: 100% !important;
   }
