--- a/src/app/expandable/expandable.component.html
+++ b/src/app/expandable/expandable.component.html
@@ -1,3 +1,3 @@
-<div #expandWrapper class="expand-wrapper" [class.collapsed]="!expanded">
+<div #expandWrapper class="expand-wrapper" [class.expanded]="expanded" [class.collapsed]="!expanded">
                 <ng-content></ng-content>
 </div>
